# TFHEftt

./: CMakeLists.txt
include/: cuhe.hpp  mult_fft.hpp  mult_ntt.hpp  mult_ntt_hexl.hpp
src/: CMakeLists.txt  file.cpp  mult_fft.cpp  mult_ntt_hexl.cpp
test/: CMakeLists.txt  fft_ntt_test.cpp  mult_fft_test.cpp  mult_test.cpp  ntt_test.cpp
test/test_results/: mult_test.txt
thirdparties/spqlios/: fft_processor_spqlios.h
